--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 Import Dekpoke
 ==============
 
-This is the data import software repository via PokeApi REST services (https://pokeapi.co),
+This is the data import software repository via Fake Store REST services (https://fakestoreapi.com/),
 developed in .NET 7 and written with C# language.
-It is a console application that retrieves two input data from the user and through HTTP calls retrieves the necessary data and composes a JSON, which is saved in the folder previously specified by the user.
